# tg-ycc-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  sailfish.toml  tg-ycc-bot.service
src/: bot.rs  main.rs  server.rs  template.html  youtube.rs
