[package]
name = "tg-ycc-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
thiserror = "1.0"
dotenvy = "0.15.7"
anyhow = "1.0.70"
reqwest = "0.11.16"
regex = "1.8.1"
once_cell = "1.17.1"

teloxide = { version = "0.12", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

youtube-captions = { path = "../youtube-captions" }

poem = { version = "1.3.55", features = ["anyhow"] }

serde_json = "1.0.96"
serde = "1.0.160"
sailfish = "0.6.1"
futures = "0.3.28"
